--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,8 @@
 GOODREADS_USER_ID="YOUR-GOODREADS-USER-ID"
 MONGO_URI=mongodb://<user>>:<password>@localhost:27017/?authSource=admin
 MONGO_DB_NAME=goodreads_data
+OPENAI_API_KEY=...
+QDRANT_HOST=localhost
+QDRANT_PORT=6333
+COLLECTION_NAME=vector_store
+HF_TOKEN=...
